about and testimonal HTML added

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -141,6 +141,7 @@
 
               <h3 class="our-mission">Our Mission</h3>
 <p>Provide the highest quality professional treatments, comfortably and hassle-free.</p>
+<p>© 2023, Hampton Concierge Esthetics</p>
 
   </footer>
 </html>
