--- a/about/index.html
+++ b/about/index.html
@@ -20,35 +20,24 @@
         </button>
         <nav class="nav">
           <ul class="nav__list">
-            <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
             <li class="nav__item">
-              <a
-                href="www.hamptonconciergeesthetics.com/testimonials"
-                class="nav__link"
+              <a href="/homepage/index.html" class="nav__link">Home</a>
+            </li>
+            <li class="nav__item">
+              <a href="/testimonials/index.html" class="nav__link"
                 >Testimonials</a
               >
             </li>
             <li class="nav__item">
-              <a
-                href="www.hamptonconciergeesthetics.com/about"
-                class="nav__link"
-                >About</a
-              >
+              <a href="/about/index.html" class="nav__link">About</a>
             </li>
             <li class="nav__item">
-              <a
-                href="www.hamptonconciergeesthetics.com/schedule"
-                class="nav__link"
-                >Schedule</a
-              >
+              <a href="/schedule/index.html" class="nav__link">Schedule</a>
             </li>
           </ul>
         </nav>
         <div class="search-icon">
-          <img
-            src="about-img/magnifying-glass copy.png"
-            alt="magnifying-glass"
-          />
+          <img src="img/magnifying-glass.png" alt="magnifying-glass" />
         </div>
       </div>
     </header>
