--- a/schedule/index.html
+++ b/schedule/index.html
@@ -23,24 +23,24 @@
         </button>
         <nav class="nav">
           <ul class="nav__list">
-            <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+            <li class="nav__item"><a href="/homepage/index.html" class="nav__link">Home</a></li>
             <li class="nav__item">
               <a
-                href="www.hamptonconciergeesthetics.com/testimonials"
+                href="/testimonials/index.html"
                 class="nav__link"
                 >Testimonials</a
               >
             </li>
             <li class="nav__item">
               <a
-                href="www.hamptonconciergeesthetics.com/about"
+                href="/about/index.html"
                 class="nav__link"
                 >About</a
               >
             </li>
             <li class="nav__item">
               <a
-                href="www.hamptonconciergeesthetics.com/schedule"
+                href="/schedule/index.html"
                 class="nav__link"
                 >Schedule</a
               >
@@ -48,7 +48,7 @@
           </ul>
         </nav>
         <div class="search-icon">
-          <img src="schedule-img/magnifying-glass.png" alt="magnifying-glass" />
+          <img src="img/magnifying-glass.png" alt="magnifying-glass" />
         </div>
       </div>
     </header>
