--- a/homepage/index.html
+++ b/homepage/index.html
@@ -2,146 +2,188 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <meta http-equiv="”X-UA-Compatible”" />
     <link rel="stylesheet" href="/homepage/style.css" />
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Playfair Display"
       href="https://fonts.googleapis.com/css?family=Assistant"
+      href="https://fonts.googleapis.com/css?family=Assistant-Light"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="custom.css" />
     <title>Hampton Concierge Aesthetics</title>
   </head>
 
   <body>
     <header>
       <!-- Navigation Menu -->
-      <div>
-        <h1 class="header">Hampton Concierge Esthetics</h1>
-        <button class="nav-toggle" aria-label="toggle navigation">
-          <span class="hamburger"></span>
-        </button>
-        <nav class="nav">
-          <ul class="nav__list">
-            <li class="nav__item"><a href="/homepage/index.html" class="nav__link">Home</a></li>
-            <li class="nav__item">
-              <a
-                href="/testimonials/index.html"
-                class="nav__link"
-                >Testimonials</a
-              >
-            </li>
-            <li class="nav__item">
-              <a
-                href="/about/index.html"
-                class="nav__link"
-                >About</a
-              >
-            </li>
-            <li class="nav__item">
-              <a
-                href="/schedule/index.html"
-                class="nav__link"
-                >Schedule</a
-              >
-            </li>
-          </ul>
+      <div id="nav-menu">
+        <nav class="navbar navbar-expand-lg bg-white">
+          <a class="navbar-brand" href="/homepage/index.html"
+            >Hampton Concierge Esthetics</a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarText"
+            aria-controls="navbarText"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/testimonials/index.html"
+                  >Testimonials</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/about/index.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/schedule/index.html">Schedule</a>
+              </li>
+            </ul>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-search"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
+              />
+            </svg>
+          </div>
         </nav>
-        <div class="search-icon">
-          <img src="img/magnifying-glass.png" alt="magnifying-glass" />
-        </div>
       </div>
     </header>
 
     <!--Main Image Section-->
     <section class="intro" id="home">
-      <h1 class="section__title section__title--intro">
-        Professional Beauty Care at Home
-      </h1>
-      <p class="section__subtitle section__subtitle--intro">
-        Dr. Kathryn Hampton will come to your home for individual or group
-        treatments. Get consultations and treatment for wrinkle reduction,
-        headache and TMJ management, and cosmetic fillers.
-      </p>
       <img
         src="img/business-woman-in-city.jpg"
         alt="picture of business woman in city"
+        class="full-width-img"
+        srcset="large-img.jpg 1024w
+        middle-img.jpg 640w
+        small-img.jpg  320w"
       />
-      <button type="button" class="hero-image-learn-more">Learn More</button>
+      <div class="intro-text">
+        <h1 class="section__title">Professional Beauty Care at Home</h1>
+        <p class="section__subtitle">
+          Dr. Kathryn Hampton will come to your home for individual or group
+          treatments. Get consultations and treatment for wrinkle reduction,
+          headache and TMJ management, and cosmetic fillers.
+        </p>
+        <button type="button" class="hero-image-learn-more">Learn More</button>
+      </div>
     </section>
 
     <!--Services-->
-      <section class="my-services" id="services">
-        <h2 class="section__title section__title--services">Premier medical esthetics</h2>
-        <div class="services">
-          <div class="service">
-            <p>Dr. Hampton offers both therapuetic and cosmetic interventions</p>
+    <section class="my-services" id="services">
+      <h2 class="section__title__services">Premier medical esthetics</h2>
+      <div class="services">
+        <div class="services-subtitle">
+          <p>Dr. Hampton offers both therapuetic and cosmetic interventions</p>
+        </div>
+        <div class="services-icons">
+          <!-- <div class="wrinkle-reduction"> -->
+          <img
+            src="img/petal-and-leaf.png"
+            width="100"
+            height="100"
+            alt="petal and leaf icon"
+          />
+          <img
+            src="img/molecule.png"
+            width="100"
+            height="100"
+            alt="molecule icon"
+          />
+          <img
+            src="img/six-leaves.png"
+            width="100"
+            height="100"
+            alt="six leaves icon"
+          />
+        </div>
+        <div>
+          <div class="service-section-headers"></div>
+          <h3>Wrinkle Reduction</h3>
+          <h3>Headache & TMJ Treatment</h3>
+          <h3>Cosmetic Fillers</h3>
           </div>
-<!-- / service-->
+          <p>
+            Targeted micro-injections reduce the appearance of fine lines and
+            wrinkles for months at a time
+          </p>
+          <!-- </div> -->
+          <!-- <div class="headache-tmj"> -->
+          <p>
+            The same treatment that relaxes skin around wrinkles also allows
+            reduction in muscle tension that can cause chronic headache and jaw
+            pain
+          </p>
+          <!-- </div> -->
+          <!-- <div class="fillers"> -->
+          
+          <p>
+            Fuller, more balanced features accomplished with targeted placement
+            of safe, durable materials
+          </p>
+          <!-- </div> -->
+        </div>
+      </div>
+    </section>
 
-<div class="service">
-  <img
-        src="img/petal-and-leaf.png"
-        alt="petal and leaf icon"
-      />
-  <h3 class="services-section-header">Wrinkle Reduction</h3>
-  <p>
-    Targeted micro-injections reduce the appearance of fine lines and wrinkles for months at a time
-  </p>
-</div>
-<!-- / service-->
-
-<div class="service">
-  <img
-  src="img/molecule.png"
-  alt="molecule icon"
-/>
-  <h3 class="services-section-header">Headache & TMJ Treatment</h3>
-  <p>
-    The same treatment that relaxes skin around wrinkles also allows reduction in muscle tension that can cause chronic headache and jaw pain
-  </p>
-</div>
-<!-- / service-->
-
-<div class="service">
-  <img
-  src="img/six-leaves.png"
-  alt="six leaves icon"
-/>
-  <h3 class="services-section-header">Cosmetic Fillers</h3>
-  <p>
-    Fuller, more balanced features accomplished with targeted placement of safe, durable materials
-  </p>
-</div>
-<!-- / services -->
-</section>
-
-<!--Contact Us-->
-<h1 class="section__title section__title--intro">
-  Schedule Today
-</h1>
-<button type="button" class="schedule-today-contact-button">Contact Us</button>
+    <!--Contact Us-->
+    <h1 class="section__title section__title--intro">Schedule Today</h1>
+    <button type="button" class="schedule-today-contact-button">
+      Contact Us
+    </button>
   </body>
 
   <!--Footer Section-->
   <footer>
-<h3 class="quick-links">Quick Links</h3>
-<a
-                href="www.hamptonconciergeesthetics.com/search"
-                class="footer__link__search"
-                >Search</a
-              >
+    <h3 class="quick-links">Quick Links</h3>
+    <a
+      href="www.hamptonconciergeesthetics.com/search"
+      class="footer__link__search"
+      >Search</a
+    >
 
-              <h3 class="info">Info</h3>
-<a
-                href="www.hamptonconciergeesthetics.com/search"
-                class="footer__link__search"
-                >Search</a
-              >
+    <h3 class="info">Info</h3>
+    <a
+      href="www.hamptonconciergeesthetics.com/search"
+      class="footer__link__search"
+      >Search</a
+    >
 
-              <h3 class="our-mission">Our Mission</h3>
-<p>Provide the highest quality professional treatments, comfortably and hassle-free.</p>
-<p>© 2023, Hampton Concierge Esthetics</p>
-
+    <h3 class="our-mission">Our Mission</h3>
+    <p>
+      Provide the highest quality professional treatments, comfortably and
+      hassle-free.
+    </p>
+    <p>© 2023, Hampton Concierge Esthetics</p>
   </footer>
 </html>
